--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Megha",
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
     "gatsby": "^2.26.1",
     "gatsby-image": "^2.5.0",
     "gatsby-plugin-manifest": "^2.6.1",
@@ -12,18 +13,26 @@
     "gatsby-plugin-react-helmet": "^3.4.0",
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-sharp": "^2.8.0",
+    "gatsby-plugin-typography": "^2.10.0",
     "gatsby-source-filesystem": "^2.5.0",
+    "gatsby-theme-material-ui": "^1.0.13",
     "gatsby-transformer-sharp": "^2.6.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-typography": "^0.16.19",
+    "typography": "^0.16.19"
   },
   "devDependencies": {
     "prettier": "2.2.1"
   },
   "keywords": [
-    "gatsby", "react", "gsap", "material-ui", "styled components"
+    "gatsby",
+    "react",
+    "gsap",
+    "material-ui",
+    "styled components"
   ],
   "license": "0BSD",
   "scripts": {
