--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Megha",
   "dependencies": {
     "@material-ui/core": "^4.11.2",
+    "dotenv": "^8.2.0",
     "gatsby": "^2.26.1",
     "gatsby-image": "^2.5.0",
     "gatsby-plugin-manifest": "^2.6.1",
@@ -14,6 +15,7 @@
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-sharp": "^2.8.0",
     "gatsby-plugin-typography": "^2.10.0",
+    "gatsby-source-contentful": "^4.4.1",
     "gatsby-source-filesystem": "^2.5.0",
     "gatsby-theme-material-ui": "^1.0.13",
     "gatsby-transformer-sharp": "^2.6.0",
