--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
+    "react-icons": "^4.1.0",
     "react-typography": "^0.16.19",
     "typography": "^0.16.19"
   },
